--- a/issues/CO_ERROR_3000000000.md
+++ b/issues/CO_ERROR_3000000000.md
@@ -24,4 +24,4 @@
     - Giá trị chỉ được phép tăng không được phép giảm.
     5. Chọn save để cập nhật lại giá trị.
 ```
-![Update Co](resources/img/update_co.png)
+![Update Co](../resources/img/update_co.png)
