--- a/issues/CO_ERROR_3000000000.md
+++ b/issues/CO_ERROR_3000000000.md
@@ -19,8 +19,13 @@
     4. Cập nhật dữ liệu hiện tại lên 20 đơn vị:
         Ví dụ: giá trị hiện tại: 292492 --> Cập nhật: 292512
     5. Lúc này ta có được 10 mã CO trống từ 292492 đến 292512. Các mã trong khoảng này có thể sử dụng được.
-    Để tránh rủi ro nên nên lấy các mã từ 292497 đến 292512. Bỏ 5 mã đầu tiên do trong lúc cập nhật có thể có thread chạy ngầm đã dùng rồi.
-    Các mã từ 292498 đến 292512 sẽ an toàn hơn
+    Để tránh rủi ro nên lấy các mã từ 292497 đến 292512. Bỏ 5 mã đầu tiên vì trong lúc  ta cập nhật có thể có thread chạy ngầm đã dùng rồi.
+    Các mã từ 292498 đến 292512 sẽ an toàn hơn.
+    6. Thay thế các chữ só 0 từ phải sang trái bằng số lượng các chữ số vừa tìm được.
+    Ví dụ dùng số 292499:
+       - Ta có:          3000000000
+        - Cập nhất thành: 3000292499
+    7. Dùng mã 3000292499 cập nhật vào cột cancel_no
 *** Lưu ý:
     - Chỉ thao khác tại thời điểm không có user thao tác trên hệ thống. 
     (Do nếu có user sử dụng giá trị sẽ thay đổi liên tục không thể xác định. Khi cập nhật lại sẽ bị sai lệch và xảy ra trường hợp trùng mã TO làm crash hệ thống).
