--- a/issues/CO_ERROR_3000000000.md
+++ b/issues/CO_ERROR_3000000000.md
@@ -25,7 +25,7 @@
     7. Thay thế các chữ só 0 từ phải sang trái bằng số lượng các chữ số vừa tìm được.
     Ví dụ dùng số 292499:
         - Ta có:          3000000000
-        - Cập nhất thành: 3000292499
+        - Cập nhật thành: 3000292499
     8. Dùng mã 3000292499 cập nhật vào cột cancel_no
 
 *** Lưu ý:
